syntax = "proto3";

package libraryv1;

option go_package = "ebusta/api/proto/v1;libraryv1";

service AuthService {
  // Проверка доступа пользователя
  rpc CheckAccess (AccessRequest) returns (AccessResponse);
}

message AccessRequest {
  string user_id = 1;      // ID (например, Telegram UID или ник в BBS)
  string platform = 2;     // Источник (web, telegram, cli, bbs)
  string trace_id = 3;     // Для сквозного логирования
}

message AccessResponse {
  bool allowed = 1;        // Разрешен ли вход
  string reason = 2;       // Причина отказа
  string user_role = 3;    // Роль пользователя (admin, family, guest)
}
